@@ -5,7 +5,7 @@
 # local config
 DMT_config.yaml
 # but make sure the global config is in the repository!
-!DMT/DMT_config.yaml
+!DMT/config/DMT_config.yaml
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
