@@ -22,7 +22,15 @@ DMT is applied in several industry research projects and has matured such that i
 people that know how to work with large software projects. It is not a GUI tool, but a framework that 
 requires you to look at examples, test-cases and software documentation in order to build 
 your own scripts. 
-Achieving better usability for engineers that do not have the time or skills to dive into such a project is not one of our current goals.
+Achieving better usability for engineers that do not have the time or skills to dive into such a project is not one of our current main goals. DMT is a very high level toolkit and has many optional dependencies. One has to invest a serious amount of time to the steep learning curve of a python, wanted interface and finally ouput (like plotting or writing reports) at the same time. This invest will pay of in the long run, as we can tell from experiance.
+
+If you make this investment, the potential gains are
+
+- simpler transfer between different interfaces for example different circuit simulators,
+- direct access to all kind of data using the same syntax,
+- faster exchange of scripts and hence workflows inside or outside of work groups and finally
+- publications with sharable scripts as open data attachment.
+
 
 If you have used our framework for research purposes, please cite us with:
 
@@ -36,16 +44,16 @@ TODO
     howpublished = {https://www.iee.et.tu-dresden.de/iee/eb/eb_home.html}
     }
 
-Currently DMT is developed at `SemiMod <https://semimod.de/>`, by:
+Currently DMT is developed at `SemiMod <https://semimod.de/>`__, by:
 
-* Dipl.-Ing. M.Krattenmacher
-* Dipl.-Ing. M.Müller
+* Dipl.-Ing. Mario Krattenmacher
+* Dipl.-Ing. Markus Müller
 * Pascal Kuthe
 
 Open-Source
 --------------
 
-The core package of DMT is available for everyone in a `gitlab.com repository <https://gitlab.com/dmt-development/dmt-core>` under GPLv3. If you find bugs, want to suggest enhancements or even join the developement team, the repository is the best point to start.
+The core package of DMT is available for everyone in a `gitlab.com repository <https://gitlab.com/dmt-development/dmt-core>`__ under GPLv3. If you find bugs, want to suggest enhancements or even join the developement team, the repository is the best point to start.
 
 If are interested in other modules, need installation or usage support, or you want to use DMT in your own project contact: info@semimod.de
 
